tests/compile_errors/as-bang-optional-target.buzz
// Use `as?` instead of `as!` when casting to optional type `str?`
import "buzz:std";

test "as! warns on optional target" {
    final anything: any = "hello";
    final casted = anything as! str?;

    std\assert(casted == "hello");
}
